fixing konsep landing page, remove daisyUi, init dark mode white mode

--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,3 @@
 .read-the-docs {
   color: #888;
 }
-
-.oliver-text {
-  font-family: 'Aktiv Grotesk', sans-serif;
-}
