--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -18,10 +18,23 @@
   }
 }
 
+@media (max-width: 768px) {
+  .name h1:first-child {
+    font-size: 100px;
+  }
+  .name h1:nth-child(2) {
+    font-size: 45px;
+  }
+  .name h1:nth-child(3) {
+    font-size: 45px;
+  }
+}
+
+
 /* Apply the typewriter effect */
-.typewriter {
+/* .typewriter {
   overflow: hidden;
   white-space: nowrap;
   border-right: 1px solid white;
   animation: typewriter 4s steps(30, end), blink 0.75s step-end infinite;
-}
+} */
